--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@expo/metro-runtime": "~3.1.3",
     "@types/react": "~18.2.45",
     "expo": "~50.0.14",
